mux-compiler/tests/snapshots/executable_integration__executable_integration__semantic_import_local_leak.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: normalized
---
error: Undefined variable 'out'
--> test_scripts/error_cases/semantic_import_local_leak.mux:4:7
   |
 4 | print(out.to_string())
   |       ^^^
   |
= help: Did you mean 'ok'?
